acmeair-monolithic-java.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: acmeair-monolithic-java-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: acmeair
        tier: monolithic
    spec:
      containers:
      - name: acmeair-java
        image: IMAGE_NAME
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "700m"
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-monolithic-service
  labels:
    app: acmeair
    tier: monolithic
spec:
  ports:
  - protocol: TCP
    port: 80
    name: http
  selector:
    app: acmeair
    tier: monolithic
---
#### Acmeair Database  #####
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: acmeair-db
  name: acmeair-db
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    service: acmeair-db
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: acmeair-db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: acmeair-db
    spec:
      containers:
      - image: mongo
        name: acmeair-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
