acmeairJAVA.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: acme-java-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: acmeair
        tier: monolithic
        micro: java
    spec:
      containers:
      - name: acmeair-java
        image: IMAGE_NAME
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "700m"
---
apiVersion: v1
kind: Service
metadata:
  name: acme-monolithic-service
  labels:
    app: acmeair
    tier: monolithic
    micro: java
spec:
  ports:
  - protocol: TCP
    port: 80
    name: http
  selector:
    app: acmeair
    tier: monolithic
    micro: java
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-monolithic
spec:
  rules:
  - host: INGRESS_URL 
    http:
      paths:
      - path: /
        backend:
         serviceName: acme-monolithic-service
         servicePort: 80
...
