ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acmeair-monolithic
spec:
  rules:
  - host: INGRESS_URL
    http:
      paths:
      - path: /
        backend:
         serviceName: acmeair-monolithic-service
         servicePort: 80
